public/css/main.css
@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Lilita+One&family=Raleway:wght@300&display=swap");

html,
body {
  margin: 0px;
  height: 100%;
  background: white;
  position: relative;
  line-height: 1.6;
  font-family: "Raleway", sans-serif; /* ændrer i skriftypen for HELE bodyen */
  scroll-behavior: smooth;
}

.section {
  scroll-snap-align: center;
}

.infoslide {
  position: center;
  width: 100%;
  height: 100vh;
  background: rgb(82, 157, 220);
  overflow: hidden;
}

#main-title {
  text-align: center;
  top: 10%;
  font-family: "Raleway", sans-serif;
  position: relative;
  font-size: 7vw;
  line-height: 200px;
  color: lightblue;
  margin: 1000;
}

.color-emphasis-1 {
  color: white;
}

.infoslide h3 {
  position: relative;
  font-size: 3vw;
  font-weight: 100;
  text-align: center;
  line-height: 100px;
  margin: 1000;
  color: lightblue;
}

.infoslide h4 {
  position: relative;
  top: 5%;
  font-size: 1.5vw;
  text-align: center;
  color: white;
}

/* scroll pil til vejvisning */
.scroll-down.arrow span {
  position: absolute;
  display: inline-block;
  top: 20px;
  height: 25px;
  width: 2px;
  left: calc(50% - 1px);
  animation: animateArrow 1.25s infinite linear;
}

@keyframes animateArrow {
  0%,
  40%,
  100% {
    opacity: 0;
  }
  75% {
    opacity: 1;
  }
}
.scroll-down.arrow span {
  top: 78%;
  animation-delay: 0s;
}

.scroll-down.arrow span::before,
.scroll-down.arrow span::after {
  position: absolute;
  content: "";
  width: 3px;
  height: 100%;
  top: 0;
  left: 0;
  background: orange;
  border-radius: 3px;
}
.scroll-down.arrow span::before {
  transform-origin: bottom;
  transform: rotate(-45deg);
}
.scroll-down.arrow span::after {
  transform-origin: bottom;
  margin-left: -1px;
  transform: rotate(45deg);
}

.button {
  background-color: black;
  transition-duration: 0.4s;
  color: white;
  text-align: center;
}

/* bølger */
.infoslide .wave {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100px;
  background: url(wave.png);
  background-size: 1000px 100px;
}

/* bølge 1 */
.infoslide .wave.wave1 {
  animation: animate 30s linear infinite;
  z-index: 1000;
  opacity: 1;
  animation-delay: 0s;
  bottom: 0;
}

@keyframes animate {
  0% {
    background-position-x: 0;
  }
  100% {
    background-position-x: 1000px;
  }
}

/* bølge 2 */
.infoslide .wave.wave2 {
  animation: animate2 15s linear infinite;
  z-index: 999;
  opacity: 0.5;
  animation-delay: -5s;
  bottom: 10px;
}

@keyframes animate2 {
  0% {
    background-position-x: 0;
  }
  100% {
    background-position-x: -1000px;
  }
}

/* bølge 3 */
.infoslide .wave.wave3 {
  animation: animate3 30s linear infinite;
  z-index: 998;
  opacity: 0.2;
  animation-delay: -2s;
  bottom: 15px;
}

@keyframes animate3 {
  0% {
    background-position-x: 0;
  }
  100% {
    background-position-x: 1000px;
  }
}

/* bølge 4 */
.infoslide .wave.wave4 {
  animation: animate4 5s linear infinite;
  z-index: 997;
  opacity: 0.7;
  animation-delay: 0s;
  bottom: 20px;
}

@keyframes animate4 {
  0% {
    background-position-x: 0;
  }
  100% {
    background-position-x: -1000px;
  }
}

/* ændrer skriftypen på aksen */
.axis {
  font-family: "Raleway", sans-serif !important;
}

.container {
  display: flex;
  padding: 0px 55px 0px 195px;
  width: 100%;
  height: 100vh;
  border: 10px black;
}

.col1 {
  height: 407.26px;
  width: fit-content;
  overflow: hidden;
  /* background: paleturquoise; */
}

.col2 {
  max-height: 407.26px;
  width: 30vw;
  text-align: center;
  border: 10px black;
  background: rgb(228, 238, 253);
}

.container2 {
  display: flex;
  width: 100%;
  height: 100vh;
  background-image: linear-gradient(white, rgb(82, 157, 220));
  padding: 50px 0px 0px 20px;
  /* text-align: center;
  top: 10%;
  font-family: "Raleway", sans-serif;
  position: relative;
  font-size: 3vw;
  line-height: 200px;
  color: orange;
  margin: 1000; */
}

.consequences {
  height: 400;
  width: 70vw;
  text-align: center;
}

.consequences2 {
  height: 550px;
  width: 30vw;
  text-align: center;
  border: 10px black;
  background: rgb(228, 238, 253);
  padding: 100, 0, 0, 0;
}

/* year overskrifter */
.water-rise {
  position: center;
  width: 100%;
  height: 100vh;
  background: white;
  overflow: hidden;
}

#water-rise-title {
  text-align: center;
  top: 5%;
  font-family: "Raleway", sans-serif;
  position: relative;
  font-size: 4vw;
  color: rgb(82, 157, 220);
  margin: 1000;
}
#water-rise-under-title {
  text-align: center;
  font-family: "Raleway", sans-serif;
  position: relative;
  font-size: 2vw;
  color: rgb(82, 157, 220);
  margin: 1000;
}

#animalTitle {
  text-align: center;
  font-family: "Raleway", sans-serif;
  position: relative;
  font-size: 4vw;
  color: rgb(82, 157, 220);
  margin: 1000;
}

/* Scroll behaviour */
@media (min-height: 30em) {
  main {
    scroll-snap-type: y mandatory;
    height: 100vh;
    overflow-y: scroll;
  }
}

@media (min-height: 30em) {
  .section {
    height: 100vh;
  }
}

.not-fun-facts {
  position: center;
  width: 100%;
  background: rgb(82, 157, 220);
}

.not-fun-facts h1 {
  text-align: center;
  font-family: "Raleway", sans-serif;
  font-size: 4vw;
  line-height: 100px;
  color: white;
  font-weight: bold;
}

.not-fun-facts h3 {
  text-align: center;
  font-family: "Raleway", sans-serif;
  font-size: 1.2vw;
  line-height: 50px;
  color: white;
}

.flip-card {
  background-color: transparent;
  width: 500px;
  height: 300px;
  perspective: 6000px;
  margin: auto;
  width: 50%;
  padding: 0px;
  border-radius: 30px;
  overflow: hidden;
}

.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.6s;
  transform-style: preserve-3d;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front,
.flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.flip-card-front .title {
  color: rgb(160, 53, 160);
  line-height: 60px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-family: "Raleway", sans-serif;
  font-size: 2vw;
  font-weight: bold;
}

.flip-card-back {
  background-color: white;
  color: black;
  transform: rotateY(180deg);
  border-radius: 30px;
  line-height: 40px;
  font-size: 1.2vw;
}

.flip-card-back a {
  color: rgb(160, 53, 160);
  line-height: 40px;
  text-align: left;
}

